--- a/app/src/main/res/menu/student_menu.xml
+++ b/app/src/main/res/menu/student_menu.xml
@@ -4,5 +4,9 @@
     <item
         android:id="@+id/add_student"
         android:title="Add Student"/>
+    <item
+        android:id="@+id/show_calendar"
+        android:title="Change Date"/>
+
 
 </menu>
