Status & Sheet work

--- a/app/src/main/res/menu/student_menu.xml
+++ b/app/src/main/res/menu/student_menu.xml
@@ -7,6 +7,10 @@
     <item
         android:id="@+id/show_calendar"
         android:title="Change Date"/>
+    <item
+        android:id="@+id/show_attendance_sheet"
+        android:title="Attendance Sheet"/>
+
 
 
 </menu>
